# firmware-shell

./: LICENSE  README.md
examples/: .gitignore  CMakeLists.txt  shell_commands.c
examples/nxpisp/: CMakeLists.txt  isp.h  isp_error_codes.h  main.cpp  shell_commands.cpp  tools.h
shell/include/shell/: shell.h
shell/src/: shell.cpp
